// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimelineRuleUnit component test component rendering right render props right match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TimelineRuleUnit
    iUnit={0}
    unit="2001"
    unitWidth={100}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "unit_0",
    "nodeType": "host",
    "props": Object {
      "children": <span>
        2001
</span>,
      "className": "TimelineRule__Item",
      "style": Object {
        "width": 100,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "2001",
      },
      "ref": null,
      "rendered": "2001",
      "type": "span",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "unit_0",
      "nodeType": "host",
      "props": Object {
        "children": <span>
          2001
</span>,
        "className": "TimelineRule__Item",
        "style": Object {
          "width": 100,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "2001",
        },
        "ref": null,
        "rendered": "2001",
        "type": "span",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`TimelineRuleUnit component test component rendering right render with empty props match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TimelineRuleUnit
    iUnit={0}
    unit="2000"
    unitWidth={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "unit_0",
    "nodeType": "host",
    "props": Object {
      "children": <span>
        2000
</span>,
      "className": "TimelineRule__Item",
      "style": Object {
        "width": 0,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "2000",
      },
      "ref": null,
      "rendered": "2000",
      "type": "span",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "unit_0",
      "nodeType": "host",
      "props": Object {
        "children": <span>
          2000
</span>,
        "className": "TimelineRule__Item",
        "style": Object {
          "width": 0,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "2000",
        },
        "ref": null,
        "rendered": "2000",
        "type": "span",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
